fix: image cropper issue

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -91,6 +91,5 @@ table th {
   min-height: 150px;
   object-fit: contain;
   display: block;
-  background-color: white;
   border-radius: 10px 0px 0px 10px;
 }
